examples/datalog/01_knowledge_graph/08_kg_switch_clears_session.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create kg_a
Knowledge graph 'kg_a' created.
Switched to knowledge graph: kg_a
> .kg use kg_a
Switched to knowledge graph: kg_a
> +data[(1,)].
Inserted 1 fact(s) into 'data'.
> temp(X, Y) :- data(X), Y = X * 2.
Script error: Query execution failed: Unsafe rule: Atom { relation: "temp", args: [Variable("X"), Variable("Y")] }. Variables ["Y"] in head do not appear in positive body atoms.
